* **New:** Update Sequence MenuItem is added to right click menu on sequences
    list row.
* **Update:** In Update Sequence Dialog 'code' attribute is enabled to edit.
* **Fix:** In Update Asset Dialog type attribute is set with value that is set
    before.
* **Fix:** Based on user permissions Studio menu is redefined.
* **New:** In List Assets Page, code of asset is added to name column.
* **jQueryGantt:**

  * **New:** The parent elements in gantt chart is now collapsible.
  * **Update:** Updated the CSS.
  * **New:** All the different types of elements in GridEditor (Project, Task,
    Asset, Shot, Sequence) are now drawn with different background colors.
  * **New:** Thickened the ganttLines to become the background element for
    TaskBars also they are now in the same class with the Grid elements and
    thus have the same bg color.
  * **Update:** Week zoom now shows the day number instead of the first letter
    of the day.
  * **Update:** Removed dateField.js.
  * **New:** For Tasks which are not shown because their start and end dates
    are not in range, a left or right red arrow will be drawn to show where the
    task is (on left or on right).
  * **New:** BID timing is added to task tooltip list.

  * **New:** jQueryGantt now stores the collapse state of tasks in a cookie and
    upon reload of the page preserves the collapse state by not drawing
    collapsed tasks, it also helps loading the gantt chart much more quickly
    for a project with 50+ tasks.
  * **Update:** The JSON data format is changed to the following format::
    
    tasks = {
        'keys' : [key1, key2, ...., keyN]
        'data' : [
            [task1.key1, task1.key2, ....., task1.keyN],
            [task2.key1, task2.key2, ....., task2.keyN],
            ...
            [taskN.key1, taskN.key2, ....., taskN.keyN],
        ]
    }
    
    This is much more compact then the original format, because the key names