@@ -111,7 +111,7 @@ require([
     // ********************************************************************
     // Generate default values
     var url;
-    var type_id;
+    var type_name;
     var start_date_value;
     var end_date_value;
     var start_time_value;
@@ -138,7 +138,7 @@ require([
         start_time_value = start_date_value;
         end_time_value = end_date_value;
 
-        type_id = '{{ vacation.type_id }}';
+        type_name = '{{ vacation.type.name }}';
 
     {% endif %}
 
@@ -188,9 +188,11 @@ require([
         required: true,
         store: type_memory,
         placeHolder: type_place_holder,
-        value: type_id
+        value: type_name
     }, 'vacation_type');
     type_comboBox.startup();
+
+    type_comboBox.attr('value', type_name);
 
 
     // ****************************************************************
@@ -210,7 +212,7 @@ require([
     // Time
     var start_time_timeTextBox = new TimeTextBox({
         name: 'start_time',
-        value: start_time_value,
+{#        value: start_time_value,#}
         style: 'width: 85px;',
         constraints: {
             timePattern: 'HH:mm:ss',
@@ -220,6 +222,7 @@ require([
         }
     }, 'vacation_start_time');
     start_time_timeTextBox.startup();
+    start_time_timeTextBox.set('value', start_time_value);
 
 
     // ****************************************************************
@@ -240,7 +243,7 @@ require([
     // Time
     var end_time_timeTextBox = new TimeTextBox({
         name: 'end_time',
-        value: end_time_value,
+{#        value: end_time_value,#}
         style: 'width: 85px',
         constraints: {
             timePattern: 'HH:mm:ss',
@@ -250,7 +253,7 @@ require([
         }
     }, 'vacation_end_time');
     end_time_timeTextBox.startup();
-
+    end_time_timeTextBox.set('value', end_time_value);
 
     // ****************************************************************
     // Notes
@@ -270,16 +273,25 @@ require([
             // merge start_date and start_time
             var start_datetime_value = start_dateTextBox.value;
             start_datetime_value.clearTime();
-            start_datetime_value.setHours(start_time_timeTextBox.value.getHours());
-            start_datetime_value.setMinutes(start_time_timeTextBox.value.getMinutes());
-            start_datetime_value.setSeconds(start_time_timeTextBox.value.getSeconds());
+            start_datetime_value.setHours(
+                    start_time_timeTextBox.value.getHours(),
+                    start_time_timeTextBox.value.getMinutes(),
+                    start_time_timeTextBox.value.getSeconds()
+            );
 
             // merge end_date and end_time
             var end_datetime_value = end_dateTextBox.value;
             end_datetime_value.clearTime();
-            end_datetime_value.setHours(end_time_timeTextBox.value.getHours());
-            end_datetime_value.setMinutes(end_time_timeTextBox.value.getMinutes());
-            end_datetime_value.setSeconds(end_time_timeTextBox.value.getSeconds());
+            end_datetime_value.setHours(
+                    end_time_timeTextBox.value.getHours(),
+                    end_time_timeTextBox.value.getMinutes(),
+                    end_time_timeTextBox.value.getSeconds()
+            );
+            console.debug('start_time_timeTextBox :', start_time_timeTextBox.value);
+            console.debug('end_time_timeTextBox   :', end_time_timeTextBox.value);
+
+            console.debug('start_datetime_value :', start_datetime_value);
+            console.debug('end_datetime_value   :', end_datetime_value);
 
             submitForm({
                 dialog: dialog,
